using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

public static class AnimationStrings
{
    public const string MoveX = "MoveX";
    public const string MoveY = "MoveY";
    public const string IsMoving = "IsMoving";
    public const string LastMoveX = "LastMoveX";
    public const string LastMoveY = "LastMoveY";
    public const string AttackSpeed = "AttackSpeed";
    public const string Attack = "Attack";
    public const string Sword = "Sword";
    public const string Spear = "Spear";
    public const string Fire = "Spear";
}

