using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

internal static class AnimationStrings
{
    internal static string MoveX = "MoveX";
    internal static string MoveY = "MoveY";
    internal static string IsMoving = "IsMoving";
    internal static string LastMoveX = "LastMoveX";
    internal static string LastMoveY = "LastMoveY";
    internal static string Sword = "Sword";
    internal static string Spear = "Spear";
    internal static string AttackSpeed = "AttackSpeed";
    internal static string Attack = "Attack";

        
}

